# langgraph-cookbook

./: .env.example  README.md  TODO.md  langgraph.json  pyproject.toml  requirements.txt
apps/: README.md
apps/job-search-team/: README.md  graph.py  main.py
apps/modal-examples/: hello_world.py
apps/newsletter-cron/: README.md  graph.py  main.py  utils.py
apps/newsletter-cron/tools/: mail.py  search.py
apps/stock-analyst/: README.md
config/: research_template.html
notebooks/: agent_supervisor.ipynb  email_sending_tool.ipynb  stock_analyst_team.ipynb
tools/: __init__.py  html_loader.py  job_search_email_template.py
utils/: __init__.py  agents.py  file_utils.py
